<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <Button
        android:id="@+id/btnAbrirGaleria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/galeria"
        android:onClick="btnAbrirGaleria_click"
        />

    <Button
        android:id="@+id/btnCamara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fotos" />

    <Button
        android:id="@+id/btnVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/video" />

    <Button
        android:id="@+id/btnAgreVid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/video"
        tools:text="@string/videoGale"
        android:onClick="btnAgreVid_click"
        />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/lytFragDin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.constraint.ConstraintLayout>

</LinearLayout>
