<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chris.notasmultimedia.MainActivity">

    <EditText
        android:id="@+id/txtTitulo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/titulo"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/txtDescripcion"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtDescripcion"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/descripcion"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="29dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnAgregar"
        android:layout_marginEnd="29dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="72dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="63dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="130dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtDescripcion"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="btnAgregar_click"
        />

</android.support.constraint.ConstraintLayout>
